SonarQube maintainability fixes